<resources>
    <string name="app_name">Bill Calculator</string>

    <string name="bc_kwh_total">Total kWH</string>
    <string name="bc_kwh_tigcal">Home kWH</string>
    <string name="bc_kwh_neighbor">Neighbor kWH</string>

    <string name="bc_amount_total">Total Amount</string>
    <string name="bc_amount_tigcal">Home Amount</string>
    <string name="bc_amount_neighbor">Neighbor Amount</string>

</resources>
