<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            card_view:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/total_kwh_text_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bc_kwh_total"
                    android:text="@string/bc_kwh_total">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/total_kwh_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:selectAllOnFocus="true"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/total_amount_text_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/total_kwh_text_layout"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:hint="@string/bc_amount_total"
                    android:text="@string/bc_amount_total">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/total_amount_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:selectAllOnFocus="true"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            card_view:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tigcal_kwh_text_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bc_kwh_tigcal"
                    android:text="@string/bc_kwh_tigcal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tigcal_kwh_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:selectAllOnFocus="true"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tigcal_amount_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tigcal_kwh_text_layout"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/bc_amount_tigcal"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/tigcal_amount_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tigcal_amount_label"
                    android:gravity="right"
                    android:text="0.00"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            card_view:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/neighbor_kwh_text_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bc_kwh_neighbor"
                    android:text="@string/bc_kwh_neighbor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/neighbor_kwh_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:selectAllOnFocus="true"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/neighbor_amount_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/neighbor_kwh_text_layout"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/bc_amount_neighbor"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/neighbor_amount_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/neighbor_amount_label"
                    android:gravity="right"
                    android:text="0.00"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
